[package]
name = "incrementalmerkletree-testing"
description = "Common types, interfaces, and utilities for testing Merkle tree data structures"
version = "0.3.0"
authors = [
    "Kris Nuttycombe <kris@nutty.land>",
    "Sean Bowe <ewillbefull@gmail.com>",
]
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
ark-ff = "0.5.0"
ark-bls12-381 = "0.5.0"
#ark-bn254 = { git = "https://github.com/arnaucube/ark-curves-cherry-picked", branch = "cherry-pick", features = ["r1cs"] }
ark-bn254 = { version = "0.5.0", default-features = false, features = ["curve"] }
ark-serialize = { version = "0.5.0", features = ["derive"] }
ark-grumpkin = { git = "https://github.com/arnaucube/ark-curves-cherry-picked", branch = "cherry-pick", features = ["r1cs"] }
ark-crypto-primitives = { version = "0.5.0", default-features = true, features = ["crh", "r1cs", "merkle_tree"] }
incrementalmerkletree = { workspace = true, features = ["test-dependencies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
ark-r1cs-std = "0.5.0"
ark-std = "0.5.0"
ark-relations = "0.5.0"

proptest.workspace = true
